# docs

./: .gitignore  .lycheeignore  404.html  AGENTS.md  ARCHITECTURE.md  CMS-README.md  CMS-TODO.md  CNAME  CONTRIBUTING.md  README.md  SITE-ARCHITECTURE.md  astro.config.mjs  build-py-docs.py  build-ts-docs.py  index.html  llms-full.txt  llms.txt  macros.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  sitemap-0.xml  sitemap-index.xml  tsconfig.json  typedoc-tsconfig.json  typedoc.json  vitest.config.ts
.artifact/: write_operations.jsonl
.github/: PULL_REQUEST_TEMPLATE.md
0.1.x/: 404.html  example.py  index.html  index.md  llms.txt  objects.inv  sitemap.xml
_astro/: Head.astro_astro_type_script_index_0_lang.D2emO6ou.js  ec.lgrc4.css  index.AS6ttks5.css  index.BOvFgXcb.css  index.CB81-GvP.css  index.CMPuqOC2.css  index.CO8HGBOi.css  index.CTZISd_n.css  index.CkT5HQXj.css  index.Cnmmce2l.css  index.IP_RY5uu.css
contribute/: index.html  index.md
designs/: 0008-proactive-context-compression.md  snapshot-api.md
docs/: README.md  README.mdx  index.html  index.md
examples/: index.html  index.md
index/: index.md
labs/: index.html  index.md
latest/: index.html  llms-full.txt  llms.txt
llms/: index.html  index.md
pagefind/: pagefind-entry.json  pagefind.en_16f4d25729.pf_meta  pagefind.en_1bbf6848b0.pf_meta  pagefind.en_21891dc353.pf_meta  pagefind.en_4da1388d33.pf_meta  pagefind.en_6c6146c938.pf_meta  pagefind.en_8d12782da5.pf_meta  pagefind.en_9957f2be78.pf_meta  pagefind.en_c5439b28b5.pf_meta  pagefind.en_ebc2774be6.pf_meta
(+3293 files in other folders)
